[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "research-analyst-platform"
version = "0.1.0"
description = "Serverless research engine for structured investigations using AI-powered entity extraction, graph-based pattern discovery, and semantic search."
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.34.0",
    "psycopg2-binary>=2.9.9",
    "gremlinpython>=3.7.0",
    "streamlit>=1.38.0",
    "pydantic>=2.5.0",
]

[project.optional-dependencies]
dev = [
    "hypothesis>=6.92.0",
    "pytest>=7.4.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
